# BMSTU_AA

./: .gitignore
lab_1/docs/: 1-settings.tex  10-sources.tex  2-title.tex  3-content.tex  4-introduction.tex  5-analysis.tex  6-engineering.tex  7-technological.tex  8-research.tex  9-conclusion.tex  report.tex
lab_1/src/: experiment.py  lsht.py  main.py  oldmain.py
lab_2/: CMakeLists.txt  data.txt  iu7-algan-cicd-student.mk  m.py
lab_2/docs/: 1-settings.tex  10-sources.tex  2-title.tex  4-introduction.tex  5-analysis.tex  6-engineering.tex  7-technological.tex  8-research.tex  9-conclusion.tex  report.tex
lab_2/inc/: experiment.h  struct_matrix.h
lab_2/ready/: app-cli-debug  stud-unit-test-report.json
lab_2/src/: experiment.c  main.c  struct_matrix.c
lab_3/docs/: 10-sources.tex  2-title.tex  4-introduction.tex  5-analysis.tex  6-engineering.tex  7-technological.tex  8-research.tex  9-conclusion.tex
lab_3/src/: main.py
lab_4/: iu7-algan-cicd-student.mk
lab_4/laboratory_work_4/: CMakeLists.txt  data.txt  p.py  parallel.txt  sequent.txt
lab_4/laboratory_work_4/docs/: 1-settings.tex  10-sources.tex  2-title.tex  4-introduction.tex  report.tex
lab_4/laboratory_work_4/src/: main.cpp
lab_4/ready/: app-cli-debug
lab_5/: iu7-algan-cicd-student.mk
lab_5/laboratory_work/: CMakeLists.txt
lab_5/laboratory_work/inc/: CrapperPipeLine.h  CrapperPipeLine.hpp  Database.h  Database.hpp  ProcessingFunctions.h  TaskQueue.h  TaskQueue.hpp  scrapper.h  scrapper.hpp
lab_5/laboratory_work/inc/General/: PipeLine.h  PipeLine.hpp  SafeQueue.h  SafeQueue.hpp  Stage.h  Stage.hpp
lab_5/laboratory_work/src/: main.cpp
lab_5/ready/: stud-unit-test-report.json
lab_5/report/: 1-settings.tex  10-sources.tex  2-title.tex  4-introduction.tex  report.tex
template_doc/: 1-settings.tex  2-title.tex  4-introduction.tex  5-analysis.tex  6-engineering.tex  8-research.tex  9-conclusion.tex  report.tex
